<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:cardBackgroundColor="#00000000"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/dimg1"
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_add_a_photo_black_24dp" />

                    <ImageView
                        android:id="@+id/dimg2"
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_add_a_photo_black_24dp" />

                    <ImageView
                        android:id="@+id/dimg3"
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_add_a_photo_black_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="2"
                        android:text="Status"
                        android:textColor="#fff"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="2"
                        android:text="₦000"
                        android:textAlignment="textEnd"
                        android:textColor="#6a915d"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/dDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Description"
                    android:textColor="#fff"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/food_quantity"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="0dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="decrement"
                android:text="-"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="0"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="16sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="increment"
                android:text="+"
                android:textColor="#fff"
                android:textSize="20sp" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="clear"
                android:text="clear"
                android:textColor="#fff" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/toppings"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Soft Drink(₦100)"
                android:textColor="#fff"
                android:textSize="12sp"
                android:textStyle="bold" />


            <!--<CheckBox-->
            <!--android:id="@+id/checkbox2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:text="Soft Drink(₦120)"-->
            <!--android:textColor="#fff"-->
            <!--android:textSize="12sp"-->
            <!--android:textStyle="bold" />-->

            <!--<CheckBox-->
            <!--android:id="@+id/checkbox3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:layout_weight="1"-->
            <!--android:text="Chicken(₦500)"-->
            <!--android:textColor="#fff"-->
            <!--android:textSize="14sp"-->
            <!--android:textStyle="bold" />-->

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/collection"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/pickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="radio"
                android:text="Pick up"
                android:textColor="#dfff"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/deliver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="radio"
                android:text="Deliver"
                android:textColor="#dfff"
                android:textStyle="bold" />
        </RadioGroup>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="Delivery Address"
            android:textColorHint="#fff" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <Button
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/colorPrimary"
                android:onClick="check"
                android:text="Check"
                android:textAlignment="center"
                android:textColor="#fff" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>
